--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* border box */
+  box-sizing: content-box;
 }
 
 code {
