--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 .App {
   text-align: center;
 }
@@ -73,4 +75,8 @@ circle {
   color-interpolation-filters: sRGB;
   flood-color: #1d51b8;   /* Define the glow color */
   flood-opacity: 0.8;
+}
+
+.ibm-plex-mono {
+  font-family: 'IBM Plex Mono', monospace;
 }
